--- a/BookBarnV2/Templates/BookBarnApp/login.html
+++ b/BookBarnV2/Templates/BookBarnApp/login.html
@@ -18,7 +18,7 @@
 			<form id="login_form" method="post" action="{% url 'loginView' %}">
 				{% csrf_token %}
 				{{ form }}
-				<input type="submit" class="btn btn-success" value="submit" />
+				<input type="submit" class="btn btn-success" value="Login" />
 			</form>
 		</div>
 	</div>
