Made required=False in forms.py

--- a/BookBarnV2/Templates/CartApp/checkout.html
+++ b/BookBarnV2/Templates/CartApp/checkout.html
@@ -19,14 +19,14 @@
 <form id="user_form" method="post" action="{% url 'CartApp:orderPlacedView' %}">
     {% csrf_token %}
 
-    <input type="radio" name="address" value="dft_add"  class="trigger" data-rel="default_address">Default Address<br>
+    <input type="radio" name="address" value="dft_add"  class="trigger" data-rel="default_address" required>Default Address<br>
     <div class="default_address radio_content">
         <span style="white-space: pre-line">{{ address }}</span>
     </div> 
 
     <br><br>
 
-    <input type="radio" name="address" value="new_add" class="trigger" data-rel="new_address">New Address<br>
+    <input type="radio" name="address" value="new_add" class="trigger" data-rel="new_address" required>New Address<br>
     <div class="new_address radio_content">
         {{ address_form.as_p}}
     </div>    
@@ -36,15 +36,18 @@
 
     <br>
 
-    <input type="radio" name="payment" value="dft_pay" class="trigger" data-rel="cash_on_delivery">Cash on Delivery<br>
+    <input type="radio" name="payment" value="dft_pay" class="trigger" data-rel="cash_on_delivery" required>Cash on Delivery<br>
     <div class="cash_on_delivery radio_content"></div>
-    <input type="radio" name="payment" value="dft_pay" class="trigger" data-rel="card_details">Credit Card<br>
+    <input type="radio" name="payment" value="dft_pay" class="trigger" data-rel="card_details" required>Credit Card<br>
     <div class="card_details radio_content">
         {{ card_form.as_p}}
     </div>
     
     <input type="submit" name="submit" value="Checkout" />
 </form>
+
+
+
     
     <script type="text/javascript">
         $(document).ready(function(){
