--- a/BookBarnV2/Templates/CartApp/checkout.html
+++ b/BookBarnV2/Templates/CartApp/checkout.html
@@ -83,7 +83,7 @@
             var radio_cod = document.querySelector("#radio_cod");
             radio_cod.addEventListener("click", function(){
                 var fields = document.querySelector(".required_field_2");
-                fields.reuired = false;
+                fields.required = false;
             });
 
             var radio_card = document.querySelector("#radio_card");
