--- a/BookBarnV2/Templates/BookBarnApp/book.html
+++ b/BookBarnV2/Templates/BookBarnApp/book.html
@@ -25,7 +25,7 @@
                             <th scope="row">Rating:</th>
                             <td>
                                 <div class="star-ratings-sprite">
-                                    <span style="width:25%" class="star-ratings-sprite-rating"></span>
+                                    <span style="width:{{ rating_percent }}%" class="star-ratings-sprite-rating"></span>
                                 </div>
                             </td>                            
                         </tr>
