--- a/BookBarnV2/Templates/ProfileApp/profile.html
+++ b/BookBarnV2/Templates/ProfileApp/profile.html
@@ -33,7 +33,7 @@
             <div class="col">
                 <ul>
                     <li><a href="{% url 'ProfileApp:updateProfileView'%}">Update Information</a></li>
-                    <li><a href="#">Order History</a></li>
+                    <li><a href="{% url 'ProfileApp:orderHistoryView'%}">Order History</a></li>
                     <li><a href="{% url 'ProfileApp:updatePasswordView'%}">Password Reset</a></li>
                 </ul>
             </div>
