--- a/BookBarnV2/Templates/CartApp/checkout.html
+++ b/BookBarnV2/Templates/CartApp/checkout.html
@@ -45,6 +45,7 @@
     
     <input type="submit" name="submit" value="Checkout" />
 </form>
+<a href="{% url 'homeView' %}"><button class="btn btn-success">Cancel</button></a>
 
 
 
