--- a/BookBarnV2/Templates/CartApp/orderplaced.html
+++ b/BookBarnV2/Templates/CartApp/orderplaced.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h3>Your order has been placed.</h3>
+            <h3>Your order has been placed. Product(s) will be delivered in 3 to 5 days!</h3>
         </div>
     </div>
 </div>
