--- a/BookBarnV2/Templates/ProfileApp/update.html
+++ b/BookBarnV2/Templates/ProfileApp/update.html
@@ -24,6 +24,7 @@
                     {{ profile_form.as_p }}
                     <input type="submit" name="submit" value="Update" />
                 </form>
+                <a href="{% url 'ProfileApp:profileView' %}"><button class="btn btn-success">Cancel</button></a>
             </div>
         </div>
         {% else %}
