--- a/BookBarnV2/Static/css/temp.css
+++ b/BookBarnV2/Static/css/temp.css
@@ -92,7 +92,7 @@ padding: 0 20px;}
 
 
 
-/*
+
 
 
 
@@ -322,4 +322,4 @@ padding: 0 20px;}
     margin: 0 21px; 
     display: inline-block;
     float: left;
-}*/
+}
