--- a/BookBarnV2/Templates/BookBarnApp/signup.html
+++ b/BookBarnV2/Templates/BookBarnApp/signup.html
@@ -11,25 +11,25 @@
 
     <div class="container">
         {% if registered %}
-        <div class="row">
+        <div class="row signupPageHeading">
             <div class="col">
-                <strong>Thank you for registering!</strong>
+                <h4>Thank you for registering!</h4>
             <a href="{% url 'homeView' %}">Return to the homepage.</a><br />
             </div>
         </div>
         {% else %}
-        <div class="row">
-            <div class="col">
+        <div class="row signupPageHeading">
+            <div class="col-12">
                 <h4>Register here!</h4><br />
             </div>
         </div>
-        <div class="row">
+        <div class="row signupPageForm">
             <div class="col">
                 <form id="user_form" method="post" action="{% url 'signupView' %}">
                     {% csrf_token %}
                     {{ user_form.as_p }}
                     {{ profile_form.as_p }}
-                    <input type="submit" name="submit" value="Register" />
+                    <input class="signupPageButton" type="submit" name="submit" value="Register" />
                 </form>
             </div>
         </div>
