Adding/Removing to/from cart now updates the stock of book + models tweaks

--- a/BookBarnV2/Templates/BookBarnApp/book.html
+++ b/BookBarnV2/Templates/BookBarnApp/book.html
@@ -83,6 +83,10 @@
                         <tr>
                           <th scope="row">Published On:</th>
                           <td>{{ book.publishedDate }}</td>
+                        </tr> 
+                        <tr>
+                          <th scope="row">Books in Stock:</th>
+                          <td>{{ book.booksCount }}</td>
                         </tr>            
                       </tbody>
                     </table>        
