--- a/BookBarnV2/Templates/BookBarnApp/book.html
+++ b/BookBarnV2/Templates/BookBarnApp/book.html
@@ -39,13 +39,22 @@
                 
                 <div class="row">                    
                     <span class="storefront_add_to_cart">
+                      {% if book.booksCount == 0 %}
+                        [Out of Stock]
+                      {% else %}
                         {% if request.user.is_authenticated %}
-                            <a href="{% url 'CartApp:add_to_cart' book.isbn %}">
+                            <!-- This way disable superuser and staff access -->
+                          {% if not request.user.is_superuser and not request.user.is_staff %}
+                            <a class="navLoginLink" href="{% url 'CartApp:add_to_cart' book.isbn %}">                                
+                          {% else %}
+                            <a href="#">
+                          {% endif %}
                         {% else %}
-                            <a href="{% url 'loginView' %}">
+                            <a class="navLoginLink" href="{% url 'loginView' %}">
                         {% endif %}
-                            [Add to Cart]
-                        </a>
+                                <button class="navButton">Add to Cart</button>
+                            </a>
+                        {% endif %}
                     </span>                    
                 </div>
             </div>
